Course statistics: sticky header and column
Groups grouping multiplies rows with student from several groups

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -713,7 +713,7 @@
     <Compile Include="Models\PrevNextButtonsModel.cs" />
     <Compile Include="Models\SlideHint.cs" />
     <Compile Include="Models\SlideRate.cs" />
-    <Compile Include="Models\UnitStatisticPageModel.cs" />
+    <Compile Include="Models\StatisticPagesModels.cs" />
     <Compile Include="Models\UserQuestion.cs" />
     <Compile Include="Models\Like.cs" />
     <Compile Include="Models\LmsRoles.cs" />
