--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -10,6 +10,7 @@
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Functions" version="1.3.1" targetFramework="net45" />
+  <package id="EPPlus" version="4.1.0" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
