First version of grader clients

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -302,8 +302,12 @@
     <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="codemirror\CsCompleterGenerator.cs" />
+    <Compile Include="Controllers\BaseExerciseController.cs" />
     <Compile Include="Controllers\CertificatesController.cs" />
+    <Compile Include="Controllers\GraderController.cs" />
+    <Compile Include="DataContexts\GradersRepo.cs" />
     <Compile Include="Helpers\ExcelWorksheetBuilder.cs" />
+    <Compile Include="Helpers\StringUtils.cs" />
     <Compile Include="Migrations\201702210620147_AddIsManualCheckingEnabledForOldSolutions.cs" />
     <Compile Include="Migrations\201702210620147_AddIsManualCheckingEnabledForOldSolutions.Designer.cs">
       <DependentUpon>201702210620147_AddIsManualCheckingEnabledForOldSolutions.cs</DependentUpon>
@@ -312,6 +316,12 @@
     <Compile Include="Migrations\201704061850482_AddHiddenFromTopComments.Designer.cs">
       <DependentUpon>201704061850482_AddHiddenFromTopComments.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704070801464_AddGraderClients.cs" />
+    <Compile Include="Migrations\201704070801464_AddGraderClients.Designer.cs">
+      <DependentUpon>201704070801464_AddGraderClients.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ExerciseSolutionByGrader.cs" />
+    <Compile Include="Models\GraderClient.cs" />
     <Compile Include="Models\GroupsFilterViewModel.cs" />
     <Compile Include="Telegram\ErrorsBot.cs" />
     <Compile Include="Telegram\TelegramBot.cs" />
@@ -923,6 +933,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704061850482_AddHiddenFromTopComments.resx">
       <DependentUpon>201704061850482_AddHiddenFromTopComments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704070801464_AddGraderClients.resx">
+      <DependentUpon>201704070801464_AddGraderClients.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1578,6 +1591,7 @@
     <Content Include="Views\Shared\_GroupsFilter.cshtml" />
     <Content Include="Views\Exercise\_TopUserReviewComments.cshtml" />
     <Content Include="Views\Exercise\_SlideCodeReviewComments.cshtml" />
+    <Content Include="Views\Grader\Clients.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
