New Notification project for sending notifications by schedule
Support for webhooking for telegram bot
Different notification fields
GetHtmlMessage for each notification type

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -52,14 +52,23 @@
 
 		<!-- Если параметр ulearn.requireHttps равен true, то все HTTP-запросы будут возвращать
 			 перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
-		<add key="ulearn.requireHttps" value="true" />
+		<add key="ulearn.requireHttps" value="false" />
 
-		<!-- Данные для интеграции с телеграмом -->
+		<!-- Данные для интеграции с Телеграмом (старые, скоро перестанут использоваться) -->
 		<add key="ulearn.telegram.token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<!-- Канал, куда отправлять новые комментарии -->
 		<add key="ulearn.telegram.comments.channel" value="" />
 		<!-- Канал, куда отправлять информацию об ошибках -->
 		<add key="ulearn.telegram.errors.channel" value="" />
+
+		<!-- Данные для интеграции с Телеграмом (новые) -->
+		<add key="ulearn.telegram.botToken" value="352930484:AAHbne8DGw4Ph5iyu5QU3p7vhoDo8_hm2bU"/>
+		<!-- Установить ли веб-хук (https://core.telegram.org/bots/webhooks). Если false, то будет использоваться лонг-поллинг сервера Телеграма -->
+		<add key="ulearn.telegram.useWebhook" value="true"/>
+		<!-- Секрет, о котором будут знать только сервере Телеграма и сервер ulearn'а. Используется, чтобы никто не мог вызвать веб-хук самостоятельно -->
+		<add key="ulearn.telegram.webhook.secret" value="123"/>
+		<!-- Домен для веб-хука. Например, ulearn.me -->
+		<add key="ulearn.telegram.webhook.domain" value="cecc63c4.ngrok.io"/>
 
 		<!-- Данные для отправки электронной почты с помощью SendGrid -->
 		<add key="SendGrid.Login" value="" />
