--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
   <package id="jint" version="2.10.4" targetFramework="net46" />
+  <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
