Fix upgrade to new SendGrid and API v3

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -63,9 +63,8 @@
     <add key="ulearn.telegram.webhook.secret" value="123" />
     <!-- Домен для веб-хука. Например, ulearn.me -->
     <add key="ulearn.telegram.webhook.domain" value="cecc63c4.ngrok.io" />
-    <!-- Данные для отправки электронной почты с помощью SendGrid -->
-    <add key="SendGrid.Login" value="" />
-    <add key="SendGrid.Password" value="" />
+    <!-- Ключ для отправки электронной почты с помощью SendGrid -->
+    <add key="SendGrid.ApiKey" value="" />
   </appSettings>
   <log4net>
     <root>
