--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -123,6 +123,7 @@
     <Compile Include="DataContexts\UserSolutionsRepo.cs" />
     <Compile Include="DataContexts\UsersRepo.cs" />
     <Compile Include="DataContexts\VisitsRepo.cs" />
+    <Compile Include="DataContexts\XQueueRepo.cs" />
     <Compile Include="Extensions\EfDbExtensions.cs" />
     <Compile Include="Extensions\UserExtentions.cs" />
     <Compile Include="FilterOptions.cs" />
@@ -398,6 +399,10 @@
     <Compile Include="Migrations\201704280544000_AddNotificationsFields.Designer.cs">
       <DependentUpon>201704280544000_AddNotificationsFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705050545060_AddXQueueModels.cs" />
+    <Compile Include="Migrations\201705050545060_AddXQueueModels.Designer.cs">
+      <DependentUpon>201705050545060_AddXQueueModels.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -430,6 +435,8 @@
     <Compile Include="Models\UserQuestion.cs" />
     <Compile Include="Models\UserQuiz.cs" />
     <Compile Include="Models\UserRole.cs" />
+    <Compile Include="Models\XQueueExerciseSubmission.cs" />
+    <Compile Include="Models\XQueueWatcher.cs" />
     <Compile Include="UserRolesInfo.cs" />
     <Compile Include="UserSearchQueryModel.cs" />
     <Compile Include="Models\Visit.cs" />
@@ -639,6 +646,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704280544000_AddNotificationsFields.resx">
       <DependentUpon>201704280544000_AddNotificationsFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705050545060_AddXQueueModels.resx">
+      <DependentUpon>201705050545060_AddXQueueModels.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
