--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -170,9 +170,6 @@
       <HintPath>..\packages\RazorGenerator.Mvc.2.4.9\lib\net40\RazorGenerator.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SendGrid">
-      <HintPath>..\packages\Sendgrid.9.1.1\lib\net452\SendGrid.dll</HintPath>
-    </Reference>
     <Reference Include="SendGrid.SmtpApi, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SendGrid.SmtpApi.1.3.2\lib\SendGrid.SmtpApi.dll</HintPath>
       <Private>True</Private>
@@ -1141,6 +1138,10 @@
     <ProjectReference Include="..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
       <Name>uLearn</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XQueue\XQueue.csproj">
+      <Project>{4b227920-6eb6-476f-95c7-1cdbe02dae3f}</Project>
+      <Name>XQueue</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
