--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -441,6 +441,7 @@
     <Compile Include="UserSearchQueryModel.cs" />
     <Compile Include="Models\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebCourseManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201407111234255_InitialCreate.resx">
