--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="ApprovalTests" version="3.0.13" targetFramework="net461" />
   <package id="ApprovalUtilities" version="3.0.13" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net461" />
+  <package id="JetBrains.dotMemoryUnit" version="2.3.20160517.113140" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
