--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -97,7 +97,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Kontur.Spam.Client, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Spam.Api.Client.1.3.2.1\lib\Kontur.Spam.Client.dll</HintPath>
+      <HintPath>..\ThirdParty\Spam.Api.Client.1.3.2.1\lib\Kontur.Spam.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
