--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -60,7 +60,7 @@
     <!-- Секрет, о котором будут знать только сервере Телеграма и сервер ulearn'а. Используется, чтобы никто не мог вызвать веб-хук самостоятельно -->
     <add key="ulearn.telegram.webhook.secret" value="123" />
     <!-- Домен для веб-хука. Например, ulearn.me -->
-    <add key="ulearn.telegram.webhook.domain" value="cecc63c4.ngrok.io" />
+    <add key="ulearn.telegram.webhook.domain" value="d3cda37f.ngrok.io" />
     <!-- Ключ для отправки электронной почты с помощью SendGrid -->
     <add key="SendGrid.ApiKey" value="" />
   </appSettings>
@@ -107,6 +107,7 @@
   </system.web>
   <system.webServer>
     <modules>
+      <remove name="FormsAuthentication" />
       <remove name="FormsAuthenticationModule" />
       <add name="ErrorLog" type="uLearn.Web.ErrorLogModule, uLearn.Web" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
@@ -219,7 +220,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.1" newVersion="4.1.1.1" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
@@ -248,6 +249,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
