Notifications settings on the profile page
All texts for notifications
Moderated comments notifications
Send password restore email via Kontur.Spam, remove SendGrid
RussianPluralizationOptions for score, hour, day and minute
StringExtensions.IsLocalUrl()
Add telegram bot name to Web.config
Add ulearn baseUrl to notifications.config

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -423,6 +423,10 @@
     <Compile Include="Migrations\201705190647437_AddNotificationsIndicies.Designer.cs">
       <DependentUpon>201705190647437_AddNotificationsIndicies.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705292128067_ChangeNotificationIndexIntToGuid.cs" />
+    <Compile Include="Migrations\201705292128067_ChangeNotificationIndexIntToGuid.Designer.cs">
+      <DependentUpon>201705292128067_ChangeNotificationIndexIntToGuid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -685,6 +689,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201705190647437_AddNotificationsIndicies.resx">
       <DependentUpon>201705190647437_AddNotificationsIndicies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705292128067_ChangeNotificationIndexIntToGuid.resx">
+      <DependentUpon>201705292128067_ChangeNotificationIndexIntToGuid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
