--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -35,18 +35,22 @@
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
+
     <!-- Данные для авторизации через ВКонтакте -->
     <add key="owin.vk.appId" value="5333292" />
     <add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
        Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
     <add key="ulearn.coursesDirectory" value="" />
     <!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта. 
        Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
     <add key="ulearn.certificatesDirectory" value="" />
+
     <!-- Если параметр ulearn.requireHttps равен true, то все HTTP-запросы будут возвращать
        перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
     <add key="ulearn.requireHttps" value="false" />
+
     <!-- Данные для интеграции с Телеграмом (старые, скоро перестанут использоваться) -->
     <add key="ulearn.telegram.token" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
     <!-- Канал, куда отправлять новые комментарии -->
@@ -55,14 +59,21 @@
     <add key="ulearn.telegram.errors.channel" value="" />
     <!-- Данные для интеграции с Телеграмом (новые) -->
     <add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
+    <!-- Имя бота без знака @. Бот должен быть доступен по ссылке https://t.me/<botName> -->
+    <add key="ulearn.telegram.botName" value="local_ulearn_me" />
     <!-- Установить ли веб-хук (https://core.telegram.org/bots/webhooks). Если false, то будет использоваться лонг-поллинг сервера Телеграма -->
     <add key="ulearn.telegram.useWebhook" value="true" />
     <!-- Секрет, о котором будут знать только сервере Телеграма и сервер ulearn'а. Используется, чтобы никто не мог вызвать веб-хук самостоятельно -->
     <add key="ulearn.telegram.webhook.secret" value="123" />
     <!-- Домен для веб-хука. Например, ulearn.me -->
-    <add key="ulearn.telegram.webhook.domain" value="d3cda37f.ngrok.io" />
-    <!-- Ключ для отправки электронной почты с помощью SendGrid -->
-    <add key="SendGrid.ApiKey" value="" />
+    <add key="ulearn.telegram.webhook.domain" value="ca27fe85.ngrok.io" />
+
+    <!-- Конфигурация для сервиса Контур.Спам: http://siberia/spam/  (работает только во внутренней сети СКБ Контур) -->
+	<add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
+	<add key="ulearn.spam.login" value="ulearn" />
+	<add key="ulearn.spam.password" value="w32eRrn7tz" />
+	<add key="ulearn.spam.channels.passwords" value="passwords" />
+
   </appSettings>
   <log4net>
     <root>
