--- a/src/Notifications.Service/App.config
+++ b/src/Notifications.Service/App.config
@@ -9,9 +9,12 @@
 	<add name="DefaultConnection" connectionString="Data Source=ANDGEIN-LAPTOP;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-	<add key="ulearn.telegram.botToken" value="352930484:AAHbne8DGw4Ph5iyu5QU3p7vhoDo8_hm2bU" />
+	<add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
 
 	<add key="ulearn.coursesDirectory" value="..\..\..\Courses\" />
+
+    <!-- Основной адрес, нужен для правильного построения ссылок в уведомлениях. Например, https://ulearn.me -->
+    <add key="ulearn.baseUrl" value="https://localhost:44300" />	
 	
 	<!-- Configuration for Kontur's SPAM service: http://siberia/spam/ (available only in the corporate network) -->
 	<add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
