Add System.Runtime as dependency to RunCsJob
Replace some dependency versions

--- a/src/RunCsJob.Service/RunCsJob.Service.csproj
+++ b/src/RunCsJob.Service/RunCsJob.Service.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Runtime" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RunCsJobService.cs">
