--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -14,13 +14,19 @@
 	<add key="ulearn.coursesDirectory" value="..\..\..\Courses\" />
 
     <!-- Основной адрес, нужен для правильного построения ссылок в уведомлениях. Например, https://ulearn.me -->
-    <add key="ulearn.baseUrl" value="https://localhost:44300" />	
+    <add key="ulearn.baseUrl" value="https://localhost:44300" />
+
+    <!-- Секретная строка для вычисления секретных хешей. Должен совпадать с аналогичной настройкой в Ulearn.Web/Web.config -->
+    <add key="ulearn.secretForHashes" value="AAGaAxFmEUjmiyixyy6VNPsaqc" />
 
 	<!-- Configuration for Kontur's SPAM service: http://siberia/spam/ (available only in the corporate network) -->
 	<add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
 	<add key="ulearn.spam.login" value="ulearn" />
 	<add key="ulearn.spam.password" value="w32eRrn7tz" />
 	<add key="ulearn.spam.channels.notifications" value="notifications" />
+    <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content (+ text_content), button, button_link, button_text, content_after_button ( + text_content_after_button) -->
+    <add key="ulearn.spam.templates.withButton" value="with_button" />
+
   </appSettings>
   <startup>
 	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
