--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -51,18 +51,22 @@
        перенаправление на HTTPS (или ошибку 500, если это POST-запрос) -->
     <add key="ulearn.requireHttps" value="false" />
 
-    <!-- Данные для интеграции с Телеграмом (старые, скоро перестанут использоваться) -->
-    <add key="ulearn.telegram.token" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
-    <!-- Канал, куда отправлять новые комментарии -->
-    <add key="ulearn.telegram.comments.channel" value="" />
-    <!-- Канал, куда отправлять информацию об ошибках -->
-    <add key="ulearn.telegram.errors.channel" value="" />
-    <!-- Данные для интеграции с Телеграмом (новые) -->
+    <!-- Секретная строка для вычисления секретных хешей -->
+    <add key="ulearn.secretForHashes" value="AAGaAxFmEUjmiyixyy6VNPsaqc" />
+
+    <!-- Данные для интеграции с Телеграмом: -->
+
+    <!-- Токен бота. Получать у t.me/BotFather -->
     <add key="ulearn.telegram.botToken" value="293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg" />
     <!-- Имя бота без знака @. Бот должен быть доступен по ссылке https://t.me/<botName> -->
     <add key="ulearn.telegram.botName" value="local_ulearn_me" />
-    <!-- Установить ли веб-хук (https://core.telegram.org/bots/webhooks). Если false, то будет использоваться лонг-поллинг сервера Телеграма -->
-    <add key="ulearn.telegram.useWebhook" value="true" />
+
+    <!-- Канал в телеграме, куда отправлять новые комментарии (скоро выключится) -->
+    <add key="ulearn.telegram.comments.channel" value="" />
+    <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
+    <add key="ulearn.telegram.errors.channel" value="" />
+
+    <!-- Данные для установки веб-хука телеграма (https://core.telegram.org/bots/webhooks) -->
     <!-- Секрет, о котором будут знать только сервере Телеграма и сервер ulearn'а. Используется, чтобы никто не мог вызвать веб-хук самостоятельно -->
     <add key="ulearn.telegram.webhook.secret" value="123" />
     <!-- Домен для веб-хука. Например, ulearn.me -->
@@ -72,7 +76,12 @@
 	<add key="ulearn.spam.endpoint" value="https://mail.testkontur.ru" />
 	<add key="ulearn.spam.login" value="ulearn" />
 	<add key="ulearn.spam.password" value="w32eRrn7tz" />
+    <!-- Канал, куда отправляются письма о восстановлении пароля -->
 	<add key="ulearn.spam.channels.passwords" value="passwords" />
+    <!-- Канал, куда отправляются письма для подтверждения электронной почты -->
+    <add key="ulearn.spam.channels.emailConfirmations" value="email_confirmations" />
+    <!-- Имя шаблона для письма с кнопкой. Поддерживаются переменные: title, content, button, button_link, button_text, content_after_button -->
+    <add key="ulearn.spam.templates.withButton" value="with_button" />
 
   </appSettings>
   <log4net>
